test/soft-contract/ill-typed/mult.caprice
(* TEST
  include refutable;
*)


let rec mult (n : int) (m : int) : { i : int | i >= 0 } =
  if n <= 0 || m <= 0
  then 0
  else n + mult n (m - 1)

(* ERROR: `n` as 0 or 1 fails predicate. `n > 1` fixes *)
let sqr (dependent n : int) : { c : int | c >= n + 1 } =
  mult n n
